landing page foundation created

--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -4,61 +4,100 @@ linkTitle = "Revanite"
 
 +++
 
-{{< blocks/cover title="" image_anchor="top" height="min" color="primary" >}}
+{{< blocks/cover title="" image_anchor="top" height="min" color="dark" >}}
+    <div class="col-12 text-center">
+        <h1>A New Era of Cyber Resilience</h1>
+        <h3>Seamless Integration. Unmatched Security. Industry-Leading Standards.</h3>
+    </div>
 {{< /blocks/cover >}}
 
-{{< blocks/lead color="primary" icon="fab fa-spotify" title="Check Out the Latest Episode" >}}
-    <p class="text-md-center"><i>Links to alternate platforms are at the bottom of this page</i></p>
-    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/show/4TJtCRn0R2lWRKHo3Fd0WB?utm_source=generator" width="100%" height="242" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-{{< /blocks/lead >}}
-<!-- 
-{{< blocks/section color="dark" icon="fa-feather" title="Featured Writers" >}}
-{{% blocks/feature icon="fab fa-twitter" title="Rick Danforth" url="https://twitter.com/Rick_and_Write" %}}
-<p class="text-md-left">Rick Danforth is a BSFA award shortlisted author from Yorkshire, England, where he works as a Systems Architect to fund his writing habit. When not working valiantly in the plot mines, he can be found doing Brazilian Jiu-Jitsu, a type of involuntary yoga with uncomfortable pyjamas.</p>
-<p class="text-md-left">His short fiction can be found in Hexagon, Translunar Traveler’s Lounge, and many other places.</p>
-{{% /blocks/feature %}}
-{{% blocks/feature icon="fab fa-twitter" title="Ian Kinder" url="https://twitter.com/CuddlebugKaiju" %}}
-<p class="text-md-left">Ian Kinder is an amateur in the classical sense— he writes for the love of it. He is for the moment a bartender, formerly a paralegal, formerly a mental health caretaker, formerly a TV technician, formerly a grocery clerk. If he isn't writing or job hunting, he is probably acting in one of his local community theaters.</p>
-{{% /blocks/feature %}}
-{{% blocks/feature icon="fab fa-twitter" title="Eddie Knight" url="https://twitter.com/the_eddieknight" %}}
-<p class="text-md-left">Eddie Knight has been a technical leader in organizations ranging from financial services to software security, enabling him to gain the wealth of experience and insight that he brings as a speaker, author, and strategist.</p>
-<p class="text-md-left">His most recent work is <a href="https://www.amazon.com/Nix-Records-Mechanocene-Eddie-Knight-ebook/dp/B0C9XJDFGY">Nix</a>, a cybercrime technothriller about a family man tech executive who's life gets turned upside down when his AI and Robotics company draws international attention.</p>
-{{% /blocks/feature %}}
-{{< /blocks/section >}} -->
+{{< blocks/lead type="row" color="dark" icon="" title="" >}}
+<style>
+    /* Ensure that the .lead block is a flex container */
+.lead {
+    display: flex;
+    justify-content: space-around;
+    align-items: stretch; /* This will ensure that all cards have the same height */
+    margin: 0 auto; /* Center the block horizontally */
+    max-width: 1200px; /* Or the max-width you prefer */
+    gap: 1rem; /* Adjust the gap between cards */
+}
 
-<!-- {{< blocks/lead type="row" color="light" icon="fa-feather" title="What stories do we accept?" >}}
-<div class="col-12" style="padding-bottom:25px;">
-    <p>We are not currently accepting submissions, but— for your reference— here are the criteria we use for stories.</p>
+/* Style for the cards */
+.card {
+    flex: 1; /* Each card will take up equal width */
+    text-align: center; /* Center text within the card */
+    border-radius: 10px; /* Rounded corners for the cards */
+    overflow: hidden; /* Ensures that children (like .card-header) do not overflow the rounded corners */
+}
+
+.card-header {
+    background-color: #6c757d; /* Bootstrap's secondary color, adjust as needed */
+    color: white;
+    margin: 0;
+    padding: 1rem; /* Adjust padding as needed */
+}
+
+.card-body {
+    color: black;
+    padding: 1rem;
+    background-color: white; /* Adjust if you have a different background */
+}
+
+/* If you want to have specific colors for each card header like in the reference, you would add classes for each */
+.card-problem .card-header {
+    background-color: #000; /* Adjust to the color you want */
+}
+
+.card-solution .card-header {
+    background-color: #563d7c; /* Adjust to the color you want */
+}
+
+.card-impact .card-header {
+    background-color: #6f42c1; /* Adjust to the color you want */
+}
+</style>
+<div class="mb-3 w-100">
+    <p class="mb-3 h3 text-center">Embark on a journey with Revanite
+    <p class="text-center">Join the effort where complex cloud compliance is simplified into effortless certification. Our approach redefines the cybersecurity landscape, offering a seamless bridge between the rigor of regulatory standards and the agility of modern cloud infrastructure.</p>
 </div>
-{{% blocks/feature title="Formatting" %}}
-<p class="text-md-left">We accept documents as .doc, .docx or, if you must, .rtf. Please follow Shunn’s modern manuscript format.</p>
-{{% /blocks/feature %}}
-{{% blocks/feature title="Multiple Submissions" %}}
-<p class="text-md-left">Please submit one story at a time. Unless otherwise directed, please wait 7 days to submit in the event that your story isn't a good fit.</p>
-{{% /blocks/feature %}}
-{{% blocks/feature title="Word Limit" %}}
-<p class="text-md-left">100-6,000 words. We intend to accept an equal number of flash-fiction and short stories.</p>
-{{% /blocks/feature %}}
-{{% blocks/feature title="Simultaneous Submissions" %}}
-<p class="text-md-left">Submitting to us and others at the same time is not only accepted, but encouraged! We do ask that you notify us as soon as possible if your submission is accepted elsewhere.</p>
-{{% /blocks/feature %}}
-{{% blocks/feature title="Payment and Rights" %}}
-<p class="text-md-left">We pay $0.01 per word for original, unpublished fiction. Payment is via PayPal only. We require First Print and Digital rights with a six-month period of exclusivity from the date of publication. All other rights remain with the author.</p>
-{{% /blocks/feature %}}
-{{% blocks/feature title="Time Length" %}}
-<p class="text-md-left">We aim to make our final decisions within a month of the submission window closing. You will often receive a response much sooner. If you haven’t heard from us by that time, please query via e-mail with query in the subject line.</p>
-{{% /blocks/feature %}}
-<div class="col-12" style="padding-top:35px;padding-bottom:20px;">
-    <p class="h3"><b>What we don’t want:</b></p>
+{{% card color="#000" header="Problem" icon="fa-lightbulb"%}}
+Adhering to various regulations to costly and bespoke solutions. The pressure to comply creates an operational quagmire for everyone.
+{{% /card %}}
+{{% card color="#563d7c" header="Solution" icon="fa-lightbulb"%}}
+Through a majority automated process, certify managed services and infrastructure as code against a control standard written by and for Financial Services Institutions.
+{{% /card %}}
+{{% card color="#6f42c1" header="Impact" icon="fa-lightbulb"%}}
+Decrease time to production for certified services at a fraction of the cost compared to other compliance certifications.
+{{% /card %}}
+{{< /blocks/lead >}}
+
+{{< blocks/lead type="row" color="light" icon="" title="Certifying CFI Resources" >}}
+<div>
+    <img class="img-responsive my-3" src="images/cfi-logo.svg" width="50%">
+    <p class="text-center">Imagine a world where highly regulated institutions can certify their compliance with a click. A world where machine-verified checks replace the arduous task of manual compliance mapping. A world where secure-by-default infrastructure is no longer a pipe dream.</p>
+    <p class="text-center">That's the power of the FINOS's <i>Compliant Financial Infrastructure</i>, an industry-wide collaboration to build Infrastructure as Code and corresponding validation tools to simplify and accelerate compliance and security.</p>
+    <a class="btn btn-primary" href="https://github.com/finos/compliant-financial-infrastructure" target="_blank" role="button">Learn More</a>
 </div>
-{{% blocks/feature title="Non-speculative fiction" %}}
-<p class="text-md-left">If there is not an element of fantasy, science fiction or horror then we are not the target market for your story.</p>
-{{% /blocks/feature %}}
-{{% blocks/feature title="Reprints" %}}
-<p class="text-md-left">We accept reprints by request only (Although we do intend to change this in the future)</p>
-{{% /blocks/feature %}}
-{{% blocks/feature title="Downers" %}}
-<p class="text-md-left">We accept <i>less than upbeat</i> tales if they are comedic, but not if they're downers! This includes overt racism, violence, sex, or negative outlooks on humanity.</p>
-{{% /blocks/feature %}}
-<div class="col-12"><p>We also ask you not to send fanfiction, published stories, or tales we've previously rejected.</p></div>
-{{< /blocks/lead >}} -->
+{{< /blocks/lead >}}
+
+{{< blocks/lead type="row" color="primary" icon="" title="Against the FINOS CCC Standard" >}}
+<div>
+    <img alt="FINOS Common Cloud Controls Logo" class="img-responsive my-3" src="images/ccc-logo.svg" width="50%">
+    <p class="text-center">Common Cloud Controls is an industry-standard framework designed to be your regulatory Rosetta Stone, translating complex requirements into a streamlined standard for security and multi-cloud portability compliance.</p>
+    <p class="text-center">This open-source, collaborative standard defines both portability and cybersecurity controls that mark the intersection of global regulatory requirements. Created by and for Financial Services Institutions, CCC is the bedrock of future financial compliance efforts.</p>
+    <a class="btn btn-secondary" href="https://github.com/finos/common-cloud-controls" target="_blank" role="button">Learn More</a>
+</div>
+{{< /blocks/lead >}}
+
+{{< blocks/lead type="row" color="dark" icon="" title="Delivering via Revanite Registry" >}}
+<div class="w-100">
+    <img class="img-responsive my-3" src="images/logo-rounded.png" style="max-width: 250px;">
+    <p class="h3 text-center">Coming Soon!</p>
+    <p class="text-center">The Revanite Registry is a source for you to retrieve certified compliant infrastructure as code modules with confidence.</p>
+    <p class="text-center">In the past, compliance required infrastructure teams to import insecure-by-default modules, then work with security specialists to identify and implement an ideal configuration state— sometimes involving days or weeks before a service is ready for production.</p>
+    <p class="text-center">Within Revanite Registry, modules are only approved for consumption <i>after</i> an automated validator is able to demonstrate that the deployed resource is compliant with the Common Cloud Controls standard.</p>
+    <p class="text-center">Instead of requiring hundreds of man hours from managed service providers to map features to controls, or requiring internal developers to maintain secure configurations, Revanite Registry expedites everything in one place.</p>
+    <a class="btn btn-light" href="#" role="button">Become an Early Adopter</a>
+</div>
+{{< /blocks/lead >}}
